# ain

./: .gitignore  README.md  RENDER_DEPLOYMENT.md  postinstall.sh  railway.json  render-requirements.txt  render.yaml  requirements.txt  start_platform.sh  streamlit_app.py  windsurf_deployment.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  __init__.py  main.py  nixpacks.toml  orchestrator_schema.py  pyproject.toml  railway.toml  requirements.txt  run.sh  start.sh
backend/agents/: __init__.py  behavioural_coach.py  dsa_evaluator.py  evaluator_agent.py  feedback_agent.py  mock_interviewer.py  orchestrator_agent.py  performance_tracker.py  question_agent.py  resume_analyzer.py
backend/core/: __init__.py  app_config.py  error_handling.py  socket_handlers.py
backend/core/routes/: __init__.py  analysis_routes.py  orchestrator_routes.py  performance_routes.py  session_routes.py
backend/core/services/: __init__.py  ai_service.py  database_service.py
backend/data/: performance.json  soft_skills.txt  technical_skills.txt
backend/database/: __init__.py  models.py  user_models.py
backend/routes/: __init__.py  async_processing.py  enhanced_resume_upload.py  enhanced_stt.py  interview.py  interview_results.py  resume_processing.py  stt.py  test_ollama.py  tts.py
backend/services/: __init__.py  conversation_orchestrator.py  ollama_service.py  question_generator.py  resume_parser.py  resume_rag.py
backend/utils/: __init__.py  ollama_client.py  pdf_parser.py
backend/utils/prompts/: behavioral_prompts.py  dsa_prompts.py  interview_prompts.py  (+2 more)
(+22 files in other folders)
