[tool.poetry]
name = "ai-ninjacoach-backend"
version = "0.1.0"
description = "AI Ninja Coach Backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
autogen = "^0.3.0"
langchain = "^0.2.0"
langchain-google-genai = "^1.0.3"
google-cloud-aiplatform = "^1.62.0"
python-dotenv = "^1.0.0"
pydantic = "^2.11.1"
SQLAlchemy = "^2.0.41"
typing-extensions = "^4.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
